TODO: fix alignment, connect JS

--- a/styles.css
+++ b/styles.css
@@ -16,70 +16,66 @@
     font-family: 'RockPaperScissors','Segoe UI', Tahoma, Verdana, sans-serif;
     display: flex;
     flex-flow: column;
-    font-size: 3vw;
+    align-content: flex-start;
+    font-size: min(max(12px, 3vw), 48px);
+    margin-right: auto;
 }
-
 .greet{
     font-size: 2.75em;
     font-weight: lighter;
     text-align: center;
-    color:rgb(115, 215, 255);
+    color:rgb(113, 213, 253);
 }
 div{
     display: flex;
-    justify-content: space-evenly;
-    align-content: space-between;
-    flex-wrap: wrap;
 }
 .game{
-    flex-flow: row wrap;
+    flex-flow: row;
+    align-items:center;
+    justify-content: space-around;
 }
 .player{
     flex-flow: column;
 }
-#headings{
+.headings{
     font-size: 1.5em;
     font-weight: lighter;
-    padding: 0 0 0 1vw;
 }
-span.player_move {
+.headings:hover{
     font-size: 1.5em;
     font-weight: lighter;
     color:skyblue;
-    padding: 0 2vw 0 2vw;
+}
+span.player_move {
+    font-size: 1.75em;
+    font-weight: lighter;
+    color:skyblue;
 }
 span.player_move:hover {
-    font-size: 1.75em;
     font-weight: lighter;
     color: lightcoral;
 }
 #icon-rock:before {
     content: "\e901";
-    font-size: 1.2em;
     opacity: 1.0;
 }
 #icon-paper:before {
     content: "\e926";
-    font-size: 1.2em;
     opacity: 1.0;
 }
 #icon-scissors:before {
     content: "\ea5a";
-    font-size: 1.2em;
     opacity: 1.0;
 }
-#vs{
-    padding: 2vh 0 0 0;
-    align-self:center;
+#middle_vs{
+    margin: 3.25em 0 0 0;
     font-size: 1.5em;
 }
-
 .computer{
     flex-flow: column;
+    align-items:center;
 }
-span.computer_disp:hover{
-    color: lightyellow;
-}
+
 #icon-computer:before {
     font-size: 3.5em;
     content: "\e956";
